--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <br>
                     <br>
                     I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction during the process more efficient and comfortable. Roughly speaking, my research interest mainly focuses on HCC, HCI, AI for SE, etc.
+                    <br>
+                    <br>
+                    I'm open to collaboration and discussion on topics related to my research interests. Just feel free to reach out to me via email :D
                 </p>
                 <div>
                     <a href="cv/cv_yhz.pdf">
