--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     I am currently a second-year Ph.D. Student in Computer Science at <a href="https://www.pku.edu.cn">Peking University</a>, advised by Prof. <a href="https://minghuizhou.github.io">Minghui Zhou</a>. Before this, I graduated from <a href="https://www.tsinghua.edu.cn">Tsinghua University</a> in June 2024 and earned my Bachelor's degree in Automatic Science.
                     <br>
                     <br>
-                    I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction during the process more efficient and comfortable. Roughly speaking, my research interest mainly focuses on HCC, HCI, AI for SE, etc.
+                    I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction during the process more efficient and comfortable. Roughly speaking, my research interest mainly focuses on Human-Centered Computing, AI for SE, etc.
                     <br>
                     <br>
                     I'm open to collaboration and discussion on topics related to my research interests. Just feel free to reach out to me via email :D
@@ -67,10 +67,10 @@
         <div class="section" id="updates">
             <h1>News</h1>
             <ul>
-                <li> <b>Mar 2025</b> &nbsp;&nbsp; Our paper is accepted to CSCW 2025!
-                <li> <b>Sep 2024</b> &nbsp;&nbsp; Started PhD at Peking University, advised by Prof. <a href="https://minghuizhou.github.io">Minghui Zhou</a>. Excited to work on HCI and AI for SE!
+                <li> <b>Mar 2025</b> &nbsp;&nbsp; Our paper is accepted to CSCW 2025! 🎉
+                <li> <b>Sep 2024</b> &nbsp;&nbsp; Started PhD at Peking University, advised by Prof. <a href="https://minghuizhou.github.io">Minghui Zhou</a>. Excited to work on HCC and AI4SE! 🔍
                 <li> <b>Jun 2024</b> &nbsp;&nbsp; Graduated from Tsinghua University with a Bachelor's degree in Automatic Science. 🎓
-                <li> <b>Jan 2024</b> &nbsp;&nbsp; Won the Comprehensive Excellence Award of Tsinghua University. 🎉
+                <li> <b>Jan 2024</b> &nbsp;&nbsp; Won the Comprehensive Excellence Award of Tsinghua University. 🥇
             </ul>
             <p></p>
             <div style="clear: both;"></div>
@@ -81,15 +81,35 @@
         <div class="section" id="education">
             <h1>Education</h1>
             <ul>
-                <li> <b>2020 - 2024</b> &nbsp;&nbsp;&nbsp;&nbsp; B.E. in Automatic Science, Tsinghua University. <b>GPA:</b> 3.76/4.00 </li>
-                <li> <b>2024 - now</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ph.D. in Computer Science, Peking University. <b>GPA:</b> 4.00/4.00</li>
+                <li> <b>2020 - 2024</b> &nbsp;&nbsp;&nbsp;&nbsp; B.E. in Automatic Science, Tsinghua University.
+                <li> <b>2024 - now</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ph.D. in Computer Science, Peking University.
             </ul>
         </div>
 
         <div class="divider"></div>
 
         <div style="display:flex;flex-direction: column;" id="research">
-            <h1>Research</h1>      
+            <h1>Selected Researches</h1>      
+            
+            <div>
+                <a href="" style="height: 12em;" class="research-thumb">
+                    <img id="teaser" width="100%" src="figs/OSS-OSM.jpg" alt="Project thumbnail">
+                </a>
+                <a href="" class="research-proj-title">
+                    From Open Source Software Development to Open Source AI Development: an Exploratory Study of Paradigm Shift
+                </a>
+                <p>
+                    <b>Hengzhi Ye</b>,
+                    Minghui Zhou
+                    <br> <!--(Published Conference)--> <br> 
+                    <a href="">Paper</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="">Code</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: Understanding the developing paradigm shifts from Open Source Software to Open Source AI Model through large scale data analysis of GitHub and Hugging Face Hub.
+                </p>
+            </div>
 
             <div>
                 <a href="" style="height: 12em;" class="research-thumb">
@@ -112,32 +132,15 @@
                 </p>
             </div>
 
-            <div>
-                <a href="" style="height: 12em;" class="research-thumb">
-                    <img id="teaser" width="100%" src="figs/hits.jpg" alt="Project thumbnail">
-                </a>
-                <a href="" class="research-proj-title">
-                    Revealing the value of Repository Centrality in lifespan prediction of Open Source Software Projects
-                </a>
-                <p>
-                    Runzhi He*,
-                    <b>Hengzhi Ye*</b>,
-                    Minghui Zhou
-                    <br>arXiv:2405.07508v1<br>
-                    <a href="https://arxiv.org/pdf/2405.07508">Paper</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                    <a href="">Code</a>
-                </p>
-                <br>
-                <p>
-                    <b>TL;DR</b>: Modeling bipartite graph for user and repository, then leveraging HITS centrality to predict the lifespan of OSS projects.
-                </p>
-            </div>
 
             <div style="clear: both;"></div>
         </div>
+
         <div style="margin-top: 2em;">
             <p>
-                * equal contribution.
+               <!--  * equal contribution.
+            </p> -->
+                See more publications on <a href="">Google Scholar</a>.
             </p>
         </div>
 
