--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction during the process more efficient and comfortable. Roughly speaking, my research interest mainly focuses on Human-Centered Computing, AI for SE, etc.
                     <br>
                     <br>
-                    I'm open to collaboration and discussion on topics related to my research interests. Just feel free to reach out to me via email :D
+                    I'm open to collaboration and discussion on topics related to my research interests. Feel free to reach out to me via email :D
                 </p>
                 <div>
                     <a href="cv/cv_yhz.pdf">
@@ -67,6 +67,7 @@
         <div class="section" id="updates">
             <h1>News</h1>
             <ul>
+                <li> <b>Oct 2025</b> &nbsp;&nbsp; Two papers are accepted by ICSE 2026! 🎉
                 <li> <b>Mar 2025</b> &nbsp;&nbsp; Our paper is accepted to CSCW 2025! 🎉
                 <li> <b>Sep 2024</b> &nbsp;&nbsp; Started PhD at Peking University, advised by Prof. <a href="https://minghuizhou.github.io">Minghui Zhou</a>. Excited to work on HCC and AI4SE! 🔍
                 <li> <b>Jun 2024</b> &nbsp;&nbsp; Graduated from Tsinghua University with a Bachelor's degree in Automatic Science. 🎓
