--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div style="display:flex;flex-direction: column;" id="research">
             <h1>Selected Researches</h1>      
-            
+            <!-- 
             <div>
                 <a href="" style="height: 12em;" class="research-thumb">
                     <img id="teaser" width="100%" src="figs/OSS-OSM.jpg" alt="Project thumbnail">
@@ -102,13 +102,34 @@
                 <p>
                     <b>Hengzhi Ye</b>,
                     Minghui Zhou
-                    <br> <!--(Published Conference)--> <br> 
+                    <br> The 29th ACM Conference on Computer-Supported Cooperative Work & Social Computing (CSCW'26) <br> 
                     <a href="">Paper</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
                     <a href="">Code</a>
                 </p>
                 <br>
                 <p>
                     <b>TL;DR</b>: Understanding the developing paradigm shifts from Open Source Software to Open Source AI Model through large scale data analysis of GitHub and Hugging Face Hub.
+                </p>
+            </div> -->
+
+            <div>
+                <a href="" style="height: 12em;" class="research-thumb">
+                    <img id="teaser" width="100%" src="figs/LV-diff.jpg" alt="Project thumbnail">
+                </a>
+                <a href="" class="research-proj-title">
+                    Small Changes, Big Trouble: Demystifying and Parsing License Variants for Incompatibility Detection in the PyPI Ecosystem
+                </a>
+                <p>
+                    Weiwei Xu,
+                    <b>Hengzhi Ye</b>,
+                    Kai Gao, Minghui Zhou
+                    <br>The the 48th IEEE/ACM International Conference on Software Engineering (ICSE'26)<br>
+                    <a href="https://arxiv.org/pdf/2507.14594">Paper</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                    <a href="https://figshare.com/s/4fbaedbeb120d1940f12">Code</a>
+                </p>
+                <br>
+                <p>
+                    <b>TL;DR</b>: Understanding the phenomenon of license variants in the PyPI ecosystem and proposing a novel diff-based method to detect license incompatibility.
                 </p>
             </div>
 
