--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     I am currently a second-year Ph.D. Student in Computer Science at <a href="https://www.pku.edu.cn">Peking University</a>, advised by Prof. <a href="https://minghuizhou.github.io">Minghui Zhou</a>. Before this, I graduated from <a href="https://www.tsinghua.edu.cn">Tsinghua University</a> in June 2024 and earned my Bachelor's degree in Automatic Science.
                     <br>
                     <br>
-                    I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction during the process more efficient and comfortable. Roughly speaking, my research interest mainly focuses on Human-Centered Computing, AI for SE, etc.
+                    I'm interested in understanding and characterizing the complex process of software development, and making both the human cooperation and human-computer interaction more efficient and comfortable. Roughly speaking, my research interest mainly focuses on human-centered computing, software engineering, etc.
                     <br>
                     <br>
                     I'm open to collaboration and discussion on topics related to my research interests. Feel free to reach out to me via email :D
